Addressed william's comments

--- a/Scripts/Manuscript.Rmd
+++ b/Scripts/Manuscript.Rmd
@@ -35,11 +35,11 @@ my_lib(packages)
 
 ## Introduction
 
-Over the last century, human activities have altered the physical and biogeochemical conditions of the ocean, including warming, acidification and reducing oxygen content [@IPCC:2019tn]. Distributions of marine species are closely related to the environment and the species’ preferences to environmental conditions (e.g., temperature, oxygen, salinity) [@Hutchinson:1957nt; @Nelson:2016kk]). As a result of climate change, many marine species have changed their distributions towards higher latitude, deeper water or have followed local temperature gradients [@Poloczanska:2016kk]. Biogeography of marine species is projected to continue to shift as ocean conditions are changing in the $21^{st}$ century under climate change [@Cheung:2010dt], impacting fisheries production and compromising our capacity to reach international sustainability goals such as Sustainable Development Goal 14 - life below water [@UnitedNations2018; @Barange:2014kr; @Singh:2017ds]. The projected risks of impacts can be reduced through improving the effectiveness of current fisheries management [@Gaines:2018sg; @Cheung:2018dh], including the fisheries management of species that cross international borders, i.e., shared stocks [@Gaines:2018sg; @Pinsky:2018cb].
+Over the last century, human activities have altered the physical and biogeochemical conditions of the ocean, including warming, acidification and reducing oxygen content [@IPCC:2019tn]. Distributions of marine species are closely related to the environment and the species’ preferences to environmental conditions (e.g., temperature, oxygen, salinity) [@Hutchinson:1957nt; @Nelson:2016kk]. As a result of climate change, many marine species have changed their distributions towards higher latitude, deeper water or have followed local temperature gradients [@Poloczanska:2016kk]. Biogeography of marine species is projected to continue to shift as ocean conditions are changing in the $21^{st}$ century under climate change [@Cheung:2010dt], impacting fisheries production and compromising our capacity to reach international sustainability goals such as Sustainable Development Goal 14 - life below water [@UnitedNations2018; @Barange:2014kr; @Singh:2017ds]. The projected risks of impacts can be reduced through improving the effectiveness of current fisheries management [@Gaines:2018sg; @Cheung:2018dh], including the fisheries management of species that cross international borders, i.e., shared stocks [@Gaines:2018sg; @Pinsky:2018cb].
 
 The concept of shared stocks was developed following the ratification of the United Nations Convention on the Law of the Sea (UNCLOS) and the claiming of Exclusive Economic Zones (EEZs) by States [@UnitedNations:1986tl]. As defined by the United Nations’ Food and Agriculture Organization (FAO), shared stocks can be classified into four non-exclusive categories: (i) transboundary stocks, those that cross neighboring EEZs; (ii) straddling stocks, that, in addition to neighboring EEZs, also visit the adjacent high seas; (iii) highly migratory stocks, mainly tunas and bill-fishes, that migrate across vast oceanic regions including both the high seas and EEZs; and finally (iv) discrete stocks that are only present in the high seas [@Munro:2004th]. This chapter focuses on transboundary stocks exploited by fisheries operating within EEZs. While countries are responsible for the management of stocks within their EEZs, under UNCLOS, States are encouraged to cooperate when stocks are shared [@UnitedNations:1986tl]. In the previous chapter, I estimated that there are 633 transboundary fish species globally, representing 67% or the identified fished taxa, yielding an annual average of 48.5 million tonnes of catch and USD 78 billion in fishing revenue (between 2005 and 2010).
 
-The effectiveness of fisheries management for transboundary stocks is challenged by the shifts in marine stocks distribution under climate change [@Pinsky:2018cb; @Pinsky:2014by]. In many cases, catch or fishing effort quotas for transboundary stocks are based on historical records [@Baudron:2020dj] and do not necessarily consider the biogeography of the stocks [@FredstonHermann:2018kp], nor the effects of climate change on the fish stocks and fisheries [@Sumby:2021gw, Chapter 2]. Misalignment between fisheries resources allocation and stocks’ distributional shifts have previously resulted in unsustainable harvest and international disputes [@Miller:2013iv; @Song:2017va; @Spijkers:2017ij], patterns that are expected to be exacerbated by intensifying climate change [@Pinsky:2018cb]. With future shifts in species distributions under climate change, the challenges for the  management of fisheries targeting transboundary stocks will continue to increase during the $21^{st}$ century. It is important to constrain when climate change will affect the dynamics of transboundary  stocks and the intensity of the resulting impacts in order to prepare ocean governance to meet the resource management challenges arising from shifting transboundary stocks [@Pinsky:2018cb; @Link:2010ei, Chapter 2].
+The effectiveness of fisheries management for transboundary stocks is challenged by the shifts in marine stocks distribution under climate change [@Pinsky:2018cb; @Pinsky:2014by]. In many cases, catch or fishing effort quotas for transboundary stocks are based on historical records [@Baudron:2020dj] and do not necessarily consider the biogeography of the stocks [@FredstonHermann:2018kp], nor the effects of climate change on the fish stocks and fisheries [@Sumby:2021gw, Chapter 2]. Misalignment between fisheries resources allocation and stocks’ distributional shifts have previously resulted in unsustainable harvest and international disputes [@Miller:2013iv; @Song:2017va; @Spijkers:2017ij], patterns that are expected to be exacerbated by intensifying climate change [@Pinsky:2018cb]. With future shifts in species distributions under climate change, the challenges for the management of fisheries targeting transboundary stocks will continue to increase during the $21^{st}$ century. It is important to constrain when climate change will affect the dynamics of transboundary  stocks and the intensity of the resulting impacts in order to prepare ocean governance to meet the resource management challenges arising from shifting transboundary stocks [@Pinsky:2018cb; @Link:2010ei, Chapter 2].
 
 The timing and intensity of climate impacts on managing transboundary fish stocks can be quantitatively examined through the concepts of ‘time of emergence’ (ToE) and ‘threat point’ (TP). Time of emergence is defined as the moment in time when a signal (e.g., future anthropogenic trend) emerges from the background noise of natural variability (e.g., historical natural variation) [@Hawkins:2012hc] and has been applied to multiple oceanic physical and biogeochemical variables [@Rodgers:2015jq; @Keller:2014jv; @Frolicher:2016dg; @Cheung:2020ja; @Schlunegger:2020gz; @Schlunegger:2019el; @Henson:2017ev]. The premise behind the time of emergence is that we can only be confident that a significant change has been detected when the signal of anthropogenic climate change is larger than the background noise of natural climate variability [@Hawkins:2012hc]. The concept of threat point comes from game theory and is defined as the minimum payoff a player is willing to receive to cooperate in a game theoretic model [@Nash:1953vr]. Game theory has been widely used to investigate and manage transboundary stocks [@Sumaila:2013hv], including the impacts of climate change on the economics of transboundary stocks between Canada and the United States [@Sumaila:2020tp].
 
@@ -184,7 +184,7 @@ grid.raster(img)
 
 My analysis suggests that most (n = 47) countries responsible for 75% of the yearly revenue generated from transboundary stocks between 2005 and 2010 will see the distribution range of their stocks shift beyond historical variabilities between 2025 and 2040 (Figure \@ref(fig:toeFigure3)). In some cases, like Indonesia (ranked $8^{th}$ in terms of revenue from transboundary stocks), Thailand (ranked $7^{th}$ in terms of revenue from transboundary stocks) and the United States (ranked $4^{th}$ in terms of fishing revenue from transboundary stocks), the range shift of transboundary stocks will emerge by around 2030. The 47 countries that make up the bulk of the global fisheries revenues also have more transboundary stocks with range shifts emerging from historical variability, such as Spain (n = 122), France (n = 85), China and Portugal (both n = 73) and Senegal (n = 66), which are the top 5 leading countries in terms of number of transboundary stocks emerging from historical variability.
 
-On average, stocks that see their transboundary index emerge by 2100 represent 27% $\pm$ 23% of the revenue generated by fisheries that target transboundary stocks within their EEZs between 2004 and 2010. However, large variation exists in the contribution of stocks with emerging transboundary index to the current revenue participation across EEZs. In some cases, like El Salvador and New Zealand, stocks with emerging transboundary index represent less than 1% of the revenue generated from transboundary fisheries in their respective EEZs between 2004 and 2014. On the contrary, stocks with emerging transboundary index from the Marshall Islands and Tokelau represent over 90% of the revenue generated from fisheries targeting transboundary stocks within their respective EEZs during the same time period (Figure \@ref(fig:toeFigure2)A). In addition, some EEZs are projected to have a few emerging stocks that represent a large proportion of revenue from transboundary stocks like Peru and Finland (with 10 and 5 emerging stocks representing 86% and 78% of average fishing revenue between 2004 to 2010, respectively). Overall, Morocco and Malaysia are the only two countries amongst the top 10 countries with the larger number of stocks with emerging transboundary index (n = 56 and 53, respectively) where the contribution of such stocks to fishing revenue is less than 20%. This indicates that, despite having a large proportion of transboundary stocks emerging, the economic contribution of these are relatively small to the overall revenue generated by fisheries targetting transboundary stocks in these countries.
+On average, stocks that see their transboundary index emerge by 2100 represent 27% $\pm$ 23% of the revenue generated by fisheries that target transboundary stocks within their EEZs between 2004 and 2010. However, large variation exists in the contribution of stocks with emerging transboundary index to the current revenue participation across EEZs. In some cases, like El Salvador and New Zealand, stocks with emerging transboundary index represent less than 1% of the revenue generated from transboundary fisheries in their respective EEZs between 2004 and 2014. On the contrary, stocks with emerging transboundary index from the Marshall Islands and Tokelau represent over 90% of the revenue generated from fisheries targeting transboundary stocks within their respective EEZs during the same time period (Figure \@ref(fig:toeFigure2)A). In addition, some EEZs are projected to have a few emerging stocks that represent a large proportion of revenue from transboundary stocks like Peru and Finland (with 10 and 5 emerging stocks representing 86% and 78% of average fishing revenue between 2004 to 2010, respectively). Overall, Morocco and Malaysia are the only two countries amongst the top 10 countries with the larger number of stocks with emerging transboundary index (n = 56 and 53, respectively) where the contribution of such stocks to fishing revenue is less than 20%. This indicates that, despite having a large proportion of transboundary stocks emerging, the economic contribution of these stocks are relatively small to the overall revenue generated by fisheries targeting transboundary stocks in these countries.
 
 
 ```{r toeFigure3, eval = T,  echo = F, fig.width=7, fig.height=8,fig.pos= "H", fig.cap =  "Average time of emergence of stocks’ transboundary index per fishing entity, aggregated by colour and shape according to region. Fishing revenue on a logarithmic scale. Showing country names for the top 90th percentile of annual fishing revenue.", fig.scap="Average time of emergence of stocks’ transboundary index per fishing entity, aggregated by colour and shape according to region", out.extra=''}
@@ -222,7 +222,7 @@ read_csv("../Tables/mlr_result.csv") %>%
 
 ### Changes in the stock share ratio of transboundary stocks
 
-I have identified the stocks that are projected to have changes in stock share ratio beyond an EEZ’s threat point and estimated the changes in the stock share ratio by the early (2020-2040) and the mid $21^{st}$ century (2040-2060), relative to the recent past (1951-2005) (see methods – Equation \@ref(eq:five)). By the early $21^{st}$ century, the global average proportion of transboundary stocks that are projected to change their stock share ratio beyond the EEZ’s threat point is 18% $\pm$ 15% (Figure \@ref(fig:toeFigure5)A). The changes in stock share ratio are expected to increase slightly towards the mid $21^{st}$ century (Figures \@ref(fig:toeFigureS4) and \@ref(fig:toeFigureS5)). However, changes in stock share ratio for specific stocks and in some EEZs are projected to be exceptionally high. For example, Guatemala shares *Panulirus gracilis* stock with Mexico, and Guatemala’s share is projected to increase by >50%, that is from 12% to 26% by the early $21^{st}$ century. Towards the mid $21^{st}$ century, changes in stock share ratio per EEZ will not be substantial (Figure \@ref(fig:toeFigureS5)) relative to the early $21^{st}$ century but are expected to increase in intensity (Figure \@ref(fig:toeFigureS4)). My results suggest that 87% (n = 238) of the world EEZs will experience changes in stock share ratio beyond a country’s threat point by the early $21^{st}$ century (Figure \@ref(fig:toeFigure5)A). These EEZs will changes in the stock share ratio beyond the threat point in one third (33% $\pm$ 21%) of their transboundary stocks (Figure \@ref(fig:toeFigure5)A). Particularly, Brazil, French Guiana, Guam, Kergelen and Pitcairin are projected to have changes beyond the threat point for all of the transboundary stocks analyzed, while Venezuela (6%), Bonaire (9%), China (10%) and Vietnam (10%) are the only countries with less than 10% of stocks changing beyond the threat point.
+I have identified the stocks that are projected to have changes in stock share ratio beyond an EEZ’s threat point and estimated the changes in the stock share ratio by the early (2020-2040) and the mid $21^{st}$ century (2040-2060), relative to the recent past (1951-2005) (see methods – Equation \@ref(eq:five)). By the early $21^{st}$ century, the global average proportion of transboundary stocks that are projected to change their stock share ratio beyond the EEZ’s threat point is 18% $\pm$ 15% (Figure \@ref(fig:toeFigure5)A). The changes in stock share ratio are expected to increase slightly towards the mid $21^{st}$ century (Figures \@ref(fig:toeFigureS4) and \@ref(fig:toeFigureS5)). However, changes in stock share ratio for specific stocks and in some EEZs are projected to be exceptionally high. For example, Guatemala shares *Panulirus gracilis* stock with Mexico, and Guatemala’s share is projected to increase by >50%, that is from 12% to 26% by the early $21^{st}$ century. Towards the mid $21^{st}$ century, changes in stock share ratio per EEZ will not be substantial (Figure \@ref(fig:toeFigureS5)) relative to the early $21^{st}$ century but are expected to increase in intensity (Figure \@ref(fig:toeFigureS4)). My results suggest that 87% (n = 238) of the world EEZs will experience changes in stock share ratio beyond a country’s threat point by the early $21^{st}$ century (Figure \@ref(fig:toeFigure5)A). These EEZs are projected to have changes in the stock share ratio beyond the threat point in one third (33% $\pm$ 21%) of their transboundary stocks (Figure \@ref(fig:toeFigure5)A). Particularly, Brazil, French Guiana, Guam, Kergelen and Pitcairin are projected to have changes beyond the threat point for all of the transboundary stocks analyzed, while Venezuela (6%), Bonaire (9%), China (10%) and Vietnam (10%) are the only countries with less than 10% of stocks changing beyond the threat point.
 
 
 ```{r toeFigure5, eval = T,  echo = F, fig.width=12, fig.height=10,fig.pos= "H", fig.cap =  "Changes in stock share ratio below each country’s threat point by 2030 (2021-2040) relative to 1951-2005. Lines represent the average gain of transboundary stock share ratio with arrows going from EEZ with decreasing stock share (point) to those that are gaining shares (arrowhead). Land polygons represent the percentage of stocks that are projected to change their stock share ratio beyond the identified threat point. Panel B zooms in to specific areas shown within the grey dashed line boundaries in A.", fig.scap="Changes in stock share ratio below each country’s threat point by 2030 (2021-2040) relative to 1951-2005.", out.extra=''}
@@ -238,7 +238,7 @@ Changes of stock share ratio are largely related to regional changes in biogeogr
 
 ## Discussion
 
-In this chapter, I investigate the timing and intensity of changes in the sharing of transboundary stocks between countries. My findings highlight the early emergence of transboundary distribution shifts from historical variations for most of the shared stocks in the world. Such early emergence of range shifts indicate the urgency of addressing the challenges that climate change is posing on international fisheries management. Moreover, I identify regional patterns of high climate risk to important fish stocks and associated fisheries at the present-day that will require immediate responses from transboundary fisheries management. Finally, I show that in many instances around the world, countries’ fisheries will experience changes in the sharing of many transboundary stocks to levels below of that needed to encourage cooperative resource management between countries. Adaptation measures are therefore needed to reduce the impacts of species range shifts on current international transboundary fisheries treaties.
+In this chapter, I investigate the timing and intensity of changes in the sharing of transboundary stocks between countries. My findings highlight the early emergence of transboundary distribution shifts from historical variations for most of the shared stocks in the world. Such early emergence of range shifts indicates the urgency of addressing the challenges that climate change is posing on international fisheries management. Moreover, I identify regional patterns of high climate risk to important fish stocks and associated fisheries at the present-day that will require immediate responses from transboundary fisheries management. Finally, I show that in many instances around the world, countries’ fisheries will experience changes in the sharing of many transboundary stocks to levels below of that needed to encourage cooperative resource management between countries. Adaptation measures are therefore needed to reduce the impacts of species range shifts on current international transboundary fisheries treaties.
 
 
 ### High present-day climate risk of on transboundary fisheries management
