Included CCW comments untill Fig 2

--- a/Scripts/Manuscript.Rmd
+++ b/Scripts/Manuscript.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Imminent range shifts in transboundary fish stocks challenge their management under climate change"
-author: 'Authors: Juliano Palacios-Abrantes^1*^, Thomas L. Frölicher^2,3^, Gabriel Reygondeau^1^, U. Rashid Sumaila^1^, Alessandro Tagliabue^4^, Colette Wabnitz^1,5^, and William W.L. Cheung^1^'
+author: 'Authors: Juliano Palacios-Abrantes^1*^, Thomas L. Frölicher^2,3^, Gabriel Reygondeau^1^, U. Rashid Sumaila^1^, Alessandro Tagliabue^4^, Colette C.C. Wabnitz^1,5^, and William W.L. Cheung^1^'
 date: 'Affiliations: ^1^Institute for the Oceans and Fisheries, University of British Columbia, Vancouver, Canada. ^2^Climate and Environmental Physics, Physics Institute, University of Bern. ^3^Oeschger Centre for Climate Change Research, University of Bern, Switzerland. ^4^School of Environmental Sciences, University of Liverpool. ^5^Stanford Center for Ocean Solutions, Stanford University, Stanford, United States'
 output: bookdown::word_document2
 reference_docx:  ../References/sci_template.docx
@@ -51,7 +51,7 @@ corresponding author: [j.palacios\@oceans.ubc.ca](mailto:j.palacios@oceans.ubc.c
 
 <!-- An opening sentence that states the question/problem addressed by the research AND Enough background content to give context to the study AND A brief statement of primary results AND A short concluding sentence. -->
 
-Climate change is shifting the distribution of transboundary fish stocks between neighbouring countries. The time-frame of such shifts determine the extent of climate change challenges to international fisheries governance. Using global climate-fisheries model simulations, we show that, within the next 15 years, 68% of the world’s transboundary fish stocks are projected to shift their distributions across international boundaries. By 2100, such shifts will occur in all countries under a ‘no mitigation’ scenario. Hotspots of transboundary shifts occur in countries that are highly dependent on fisheries for income and livelihood. The imminent onset of transboundary shifts highlight the urgency to re-formulate international fisheries policies to avoid disputes over fish stock.  Bi- and multi-lateral actions discussions should start now as lead-time for policy changes is long.
+Climate change is shifting the distribution of transboundary fish stocks between neighbouring countries. The time-frame of such shifts determines the extent of climate change challenges to international fisheries governance. Using global climate-fisheries model simulations, we show that, within the next 15 years, 68% of the world’s transboundary fish stocks are projected to shift their distributions across international boundaries. By 2100, such shifts will occur in all countries under a ‘no mitigation’ scenario. Hotspots of transboundary shifts occur in countries that are highly dependent on fisheries for income, food and livelihoods. The imminent onset of transboundary shifts highlights the urgency to re-formulate international fisheries policies to limit conflict over these fish stocks. Bi- and multi-lateral actions should start now as lead-time for policy change is long.
 
 **One-Sentence Summary**
 
@@ -59,19 +59,19 @@ Rapid climate-induced shifts in transboundary fish stocks
 
 **Main Text.**
 
-In the past century, human activities have altered the physical and biogeochemical conditions of the ocean, resulting in warmer, more acidic and less oxygenated waters [@IPCC:2019tn]. Marine species' distributions reflect species' preferences for discrete environmental conditions [@Hutchinson:1957nt].As a result of these past changes, many marine species have shifted their distributions towards higher latitudes, deeper water or to follow local temperature gradients to remain within their optimal environmental "niche" [@Poloczanska:2016kk]. The biogeography of marine species is projected to continue to shift as ocean conditions change through the 21st century [@Cheung:2010dt], impacting fisheries production and economies [@Sumaila:2019ew], and compromising our capacity to reach international sustainability goals within the 2030 Agenda such as Sustainable Development Goal 14 - life below water [@UnitedNations2018; @Singh:2017ds; @Pecl:2017hu]. The projected risks of impacts can be reduced by improving the effectiveness of current fisheries management, including for species that cross international borders, which are known as ‘shared stocks’ [@Pinsky:2018cb].
+Most fisheries management is poorly adapted to address species’ shifting distributions as a result of human driven warmer, more acidic and less oxygenated ocean waters. Over the past century, human activities have dramatically altered the physical and biogeochemical conditions of the ocean, resulting in warmer, more acidic and less oxygenated waters [@IPCC:2019tn]. Marine species’ distributions reflect species’ preferences for discrete environmental conditions [@Hutchinson:1957nt]. As a result of changing ocean conditions, many marine species have shifted their distributions towards higher latitudes, deeper water or following local temperature gradients to remain within their optimal environmental “niche” [@Poloczanska:2016kk]. The biogeography of marine species is projected to continue to shift as ocean conditions change through the 21st century [@Cheung:2010dt], impacting fisheries production and economies [@Sumaila:2019ew], and compromising our capacity to reach international sustainability goals within the 2030 Agenda for sustainable development such as Goal 14 - life below water [@UnitedNations2018; @Singh:2017ds; @Pecl:2017hu]. The projected risks of impacts can be reduced by improving the effectiveness of current fisheries management, including for species that cross international borders, also known as ‘shared stocks’ [@Pinsky:2018cb].
 
-The concept of shared stocks was developed following the ratification of the United Nations Convention on the Law of the Sea (UNCLOS) and the claiming of Exclusive Economic Zones (EEZs) by Coastal States [@UnitedNations:1986tl]. As defined by the United Nations' Food and Agriculture Organization, shared stocks can be classified into four non-exclusive categories: (*i*) transboundary stocks, which cross neighboring EEZs; (*ii*) straddling stocks that, in addition to neighboring EEZs, also visit the adjacent high seas; (*iii*) highly migratory stocks, mainly tunas and bill-fishes, that migrate across vast oceanic regions including both the high seas and EEZs; and (*iv*) discrete stocks that are only present in the high seas [@Munro:2004th]. This study focuses on transboundary stocks exploited by fisheries operating within EEZs. Countries are responsible for the management of stocks within their EEZs, under UNCLOS, and are encouraged to cooperate when stocks are shared [@UnitedNations:1986tl]. A recent study estimates that, globally, there are 633 transboundary fish species representing 67% of identified exploited taxa. These species yielded an annual average of 48 million tonnes of catch and USD 78 billion in fishing revenue between 2005 and 2010 [@PalaciosAbrantes:2020tv].
+The concept of shared stocks was developed following the ratification of the United Nations Convention on the Law of the Sea (UNCLOS) and the claiming of Exclusive Economic Zones (EEZs) by Coastal States [@UnitedNations:1986tl]. As defined by the United Nations' Food and Agriculture Organization, shared stocks can be classified into four non-exclusive categories: (*i*) transboundary stocks, which cross neighboring EEZs; (*ii*) straddling stocks that, in addition to neighboring EEZs, also visit the adjacent high seas; (*iii*) highly migratory stocks, mainly tunas and bill-fishes, that migrate across vast oceanic regions including both the high seas and EEZs; and (*iv*) discrete stocks that are only present in the high seas [@Munro:2004th]. This study focuses on transboundary stocks exploited by fisheries operating within EEZs. Countries are responsible for the management of stocks within their EEZs. Under UNCLOS, EEZs are encouraged to cooperate when stocks are shared [@UnitedNations:1986tl]. A recent study estimates that there are 633 transboundary fish species globally, representing 67% of identified exploited taxa. Between 2005 and 2010, these species yielded an annual average of 48 million tonnes of catch and USD 78 billion in fishing revenue [@PalaciosAbrantes:2020tv].
 
-The effectiveness of fisheries management for transboundary species, and thus reaching the 2030 Agenda [@Pecl:2017hu], is challenged by shifts in stocks' distribution under climate change [@Pinsky:2018cb; @Pinsky:2014by; @Pinsky:2020jx; @Oremus:2020id]. In most cases, catch or fishing effort quotas for transboundary stocks are based on historical records and do not necessarily consider the full distribution range of the stock [@FredstonHermann:2018kp], nor the effects of climate change on fish stocks and associated fisheries [@PalaciosAbrantes:2020tv; @Sumby:2021gw]. While many transboundary stocks experience natural seasonal spatial variation (e.g., migration, reproductive cycle), misalignment between fisheries resources allocation and distributional shifts beyond such natural variation have previously resulted in unsustainable fishing levels and international disputes [@Miller:2013iv; @Spijkers:2017ij; @Crespo:2020cs]. Such patterns are expected to be exacerbated by continuing climate change [@Pinsky:2018cb; @Sumaila:2011bq]. The importance of transboundary stocks for both catch and fisheries revenue [@PalaciosAbrantes:2020tv] highlights their critical role in achieving the  Sustainable Development Goals (SDG) under the United Nations 2030 Agenda. Understanding when climate change will affect the sharing dynamics of transboundary stocks and the intensity of the resulting impacts is important for developing climate resilient international ocean governance and achieving the 2030 Agenda [@Pinsky:2018cb; @Link:2010ei; @Sumaila:2020tp].
+The effectiveness of fisheries management for transboundary species is challenged by shifts in stocks’ distribution under climate change [@Pinsky:2018cb; @Pinsky:2014by; @Pinsky:2020jx; @Oremus:2020id]. In most cases, catch or fishing effort quotas for transboundary stocks are based on historical records and do not necessarily consider the full distribution range of the stock [@FredstonHermann:2018kp], nor the effects of climate change on fish stocks and associated fisheries [@PalaciosAbrantes:2020tv; @Sumby:2021gw]. While many transboundary stocks experience natural seasonal spatial variation (e.g., migration, reproductive cycle), misalignment between fisheries resources allocation and distributional shifts beyond such natural variation have previously resulted in unsustainable fishing levels and international disputes [@Miller:2013iv; @Spijkers:2017ij; @Crespo:2020cs]. Such patterns are expected to be exacerbated under continuing climate change [@Pinsky:2018cb; @Sumaila:2011bq]. The importance of transboundary stocks for both catch and fisheries revenue [@PalaciosAbrantes:2020tv] highlights their critical role in achieving the  Sustainable Development Goals (SDG) under the United Nations 2030 Agenda. Understanding when climate change will affect the sharing dynamics of transboundary stocks and the intensity of the resulting impacts is important for developing climate resilient international ocean governance and achieving the goals set out under the 2030 Agenda [@Pinsky:2018cb; @Link:2010ei; @Sumaila:2020tp].
 
 Here, we employ a mechanistic population dynamic model driven by output from a comprehensive Earth System Model with ten ensemble members to project transboundary stocks’ distribution across the 280 EEZs of 198 coastal countries under a high greenhouse gas emissions scenario (RCP8.5; Methods). We then estimate the year in which the 663 transboundary species (9,132 stocks) are projected to shift their shared distribution beyond historical variation and the intensity of this shift (i.e., time of emergence; see Methods). We treat each species in an EEZ as a single stock due to the lack of more spatially resolved data to delineate the boundary of a population (15) and only consider shared stocks between neighboring EEZs (i.e., excluding the high seas).
 
 **Identifying range shifts in the shared distribution of transboundary stocks**
 
-Our results suggest that 4,119 transboundary stocks will experience a range shift beyond historical variability as early as 2006 and up to 2100 (Fig. \@ref(fig:toeFigure1)A). This corresponds to 68% of the studied stocks (Fig. \@ref(fig:toeFigure1)C).The average year of shift in the shared distribution of these stocks in all EEZs analyzed is projected to be 2036 (s.d. of all species, $\pm$ 28 years). Furthermore, 96% of the world’s EEZs will experience at least one transboundary stock shift between 2006 and 2100 with around 80% presenting a distributional shift across stocks by the time the UN 2030 Agenda is intended to be achieved (Fig. \@ref(fig:toeFigure1)C).
+Our results suggest that 4,119 transboundary stocks will experience a range shift beyond historical variability as early as 2006 and up to 2100 (Fig. \@ref(fig:toeFigure1)A). This corresponds to 68% of the studied stocks (Fig. \@ref(fig:toeFigure1)C).The average year of shift in the shared distribution of these stocks in all EEZs analyzed is projected to be 2036 (s.d. of all species, $\pm$ 28 years). Furthermore, 96% of the world’s EEZs will experience at least one transboundary stock shift between 2006 and 2100 with around 80% having recorded a distributional shift in stocks by the UN 2030 Agenda’s deadline (Fig. \@ref(fig:toeFigure1)C).
 
-```{r toeFigure1, eval = T,  echo = F, fig.width = 9, fig.height=4, fig.pos= "H", fig.cap =  "Timeline of shifts in transboundary shared stock distribution. Dashed lines represent the year by which countries have committed to reach the full implementation of the 2030 Agenda, as well as a mid and late change in range shift, respectively."}
+```{r toeFigure1, eval = T,  echo = F, fig.width = 9, fig.height=4, fig.pos= "H", fig.cap =  "The timeline is presented according to cumulative A. Number of stocks (cumulative), B. Number of EEZs and C. proportion of total stocks and EEZs. Dashed lines represent the year by which countries have committed to reach full implementation of the 2030 Agenda, as well as mid and late change  in range shift (Methods), respectively."}
 
 img <- readPNG("../Figures/Fig1.png")
 grid.raster(img)
@@ -80,7 +80,8 @@ grid.raster(img)
 
 <!-- ![Figure 1. Cumulative increase in time of emergence by Exclusive Economic Zone and transboundary species in absolute numbers and percentage.](../Figures/Fig2.png) -->
 
-The median year in which transboundary stocks experience a range shift varies significantly according to the geographic region of the neighboring EEZs (Kruskal-Wallis, $X^2$ = 242.11, DF = 93, *p* < 0.001; Figure \@ref(fig:toeFigure2)A). Overall, most tropical EEZs will see earlier shifts, with the EEZs of Latin America, the Caribbean and Polynesia being significantly earlier (*p* < 0.05; see Table S\@ref(tab:toeTableS2) for test statistics) than almost all other regions (Fig. \@ref(fig:toeFigure2)B). In contrast, EEZs located in temperate regions like northern Europe and eastern Asia are projected to experience much later range shifts (Table \@ref(tab:toeTableS2)).Stocks in countries such as Brazil and New Zealand are not projected to experience range shifts beyond natural variability (e.g., the transboundary index of a stock did not change beyond historical variability) (Fig. \@ref(fig:toeFigure2)A). On average, shifting transboundary stocks represented 23% (s.d. $\pm$ 22%) of yearly fishing revenue from fisheries targeting such stocks within global EEZs between 2004 and 2010 (Fig. \@ref(fig:toeFigure2)A). However, large variation exists, with shifting stocks representing less than 1% of fishing revenue in some countries (e.g., Ireland) and over 90% in others (e.g., Marshall Islands). Moreover, in some EEZs, while few transboundary stocks are projected to shift beyond historical variability, they still represent a large proportion of revenue derived from fisheries within that EEZ (e.g., Peru).
+
+The median year in which transboundary stocks experience a range shift varied significantly according to the geographic region of the neighboring EEZs (Methods; Kruskal-Wallis, $X^2$ = 242.11, DF = 93, *p* < 0.001; Figure \@ref(fig:toeFigure2)A)) and a species’ habitat association (Methods; *p* < 0.05; Table S\@ref(tab:toeTableS2)). Overall, most tropical EEZs and stocks will see earlier shifts, with the EEZs of Latin America, the Caribbean and Polynesia experiencing shifts significantly earlier (*p* < 0.05; see Tables S\@ref(tab:toeTableS1, S\@ref(tab:toeTableS2 for full statistics) than almost any other region (Fig. \@ref(fig:toeFigure2)B, \@ref(fig:toeFigureSX)). In contrast, EEZs and stocks located in temperate regions like northern Europe and eastern Asia are projected to experience much later range shifts (Table \@ref(tab:toeTableS2)).Stocks in countries such as Brazil and New Zealand are not projected to experience range shifts beyond natural variability (Fig. \@ref(fig:toeFigure2)A). On average, shifting transboundary stocks represented 23% (s.d. $\pm$ 22%) of yearly fishing revenue from fisheries targeting such stocks within global EEZs between 2004 and 2010 (Fig. \@ref(fig:toeFigure2)A). However, large variation exists, with shifting stocks representing less than 1% of fishing revenue in some countries (e.g., Ireland) and over 90% in others (e.g., Marshall Islands). Moreover, in some EEZs, while few transboundary stocks are projected to shift beyond historical variability, they still represent a large proportion of revenue derived from fisheries within that EEZ (e.g., Peru).
 
 ```{r toeFigure2, eval = T,  echo = F, fig.width  = 13,fig.pos= "H", fig.height =11, fig.cap =  "Year of change in the shared distribution of 4,119 transboundary stocks. A) Land polygon shows the contribution of shifting stocks to the country’s total fishing revenue from transboundary stocks. Exclusive Economic Zone polygons represent average range shifts within them. EEZs with no distributional shifts between 2006 and 2100 are represented in aqua color. B) Year of shared distribution shifts by region according to United Nations sub-regions. Points represent the median year of range shift. Horizontal dashed line represents the year 2030. N = North, S = South, W = West and E = East. Ltn. Ame. and the Car. = Latin America and the Caribbean. Aus and New Z. = Australia and New Zealand"}
 
